--- a/Android /LocationSave/app/src/main/res/values/strings.xml
+++ b/Android /LocationSave/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">LocationSave</string>
     <string name="title_activity_record_list">RecordListActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 
 </resources>
